# colortty

./: Cargo.toml  LICENSE.txt  README.md
src/: color.rs  error.rs  lib.rs  main.rs  provider.rs  repo.rs
tests/: color.rs
tests/fixtures/: two-firewatch-light.itermcolors
