[package]
name = "colortty"
version = "0.2.4"
authors = ["Shuhei Kagawa <shuhei.kagawa@gmail.com>"]
license = "MIT"
repository = "https://github.com/shuhei/colortty"
readme = "README.md"
keywords = ["alacritty", "color"]
categories = ["command-line-utilities"]
description = "A utility to generate color schemes for alacritty"
edition = "2018"

[dependencies]
getopts = "0.2.21"
RustyXML = "0.3.0"
regex = "1.5.6"
json = "0.12.4"
thiserror = "1.0"
dirs = "4.0.0"
futures = "0.3.21"
surf = "2.3.2"

[dependencies.async-std]
version = "1.11.0"
features = ["attributes"]
